# retro-pixelator

./: CMakeLists.txt  README.md
pixelator/: CMakeLists.txt
pixelator/include/pixelator/: pixelator.h
pixelator/src/: main.c  pixelator.c
